# mnpbem

./: .gitignore  MULTI_LANGUAGE_README.md  PUBLISHING_GUIDE.md  README.md  RELEASE_SETUP_GUIDE.md  SECRETS_GUIDE.md  example.py  index.html
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: TagBot.yml  cleanup-deployments.yml  jekyll-gh-pages.yml  mnpbem.yml  mnpbembase.yml  mnpbembem.yml  mnpbemdemo.yml  mnpbemdemomnpbem.yml  mnpbemgreenfun.yml  mnpbemhelp.yml  mnpbemmaterial.yml  mnpbemmesh2d.yml  mnpbemmex.yml  mnpbemmie.yml  mnpbemmisc.yml  mnpbemparticles.yml  mnpbemsimulation.yml  npm-publish.yml  pages.yml  publish-conan.yml  publish-csharp.yml  publish-julia.yml  publish-ruby.yml  publish-rust.yml  r-cran-check.yml  release-master.yml  sync-deployment-links.yml  update-example-gallery.yml
c-mnp-plasmon/: CMakeLists.txt  README.md  vcpkg.json
c-mnp-plasmon/cmake/: mnp_plasmonConfig.cmake.in
c-mnp-plasmon/examples/: demo.c  spectrum_csv.c
c-mnp-plasmon/src/: mnp_plasmon.c  mnp_plasmon.h
c-mnp-plasmon/test/: mnp_plasmon_tests.c
conan-mnp-plasmon/: CMakeLists.txt  conanfile.py
conan-mnp-plasmon/include/: mnp_plasmon.h
conan-mnp-plasmon/src/: mnp_plasmon.c
conan-mnp-plasmon/test_package/: CMakeLists.txt  conanfile.py
conan-mnp-plasmon/test_package/src/: example.c
csharp-mnp-plasmon/: README.md
csharp-mnp-plasmon/Demo/: Demo.csproj  Program.cs
csharp-mnp-plasmon/MnpPlasmon/: MnpPlasmon.cs  MnpPlasmon.csproj  MnpPlasmon.nuspec
csharp-mnp-plasmon/MnpPlasmon.Tests/: MnpPlasmon.Tests.csproj  MnpPlasmonTests.cs
cxx-mnp-plasmon/: CMakeLists.txt  LICENSE  README.md  vcpkg.json
cxx-mnp-plasmon/cmake/: mnp_plasmon_cxxConfig.cmake.in
cxx-mnp-plasmon/examples/: demo.cpp  spectrum_csv.cpp
cxx-mnp-plasmon/include/: mnp_plasmon.hpp
cxx-mnp-plasmon/src/: mnp_plasmon.cpp
cxx-mnp-plasmon/test/: mnp_plasmon_test.cpp
docs/example-data/: c.csv  cpp.csv  csharp.csv  javascript.csv  julia.csv  python.csv  r.csv  ruby.csv  rust.csv
hex-mnp-plasmon/: .gitignore  LICENSE  README.md  rebar.config
hex-mnp-plasmon/_build/test/plugins/hex_core/: hex_metadata.config
hex-mnp-plasmon/doc/: edoc-info  index.html  mnp_plasmon.html  mnp_plasmon_material.html  mnp_plasmon_mie.html  modules-frame.html  overview-summary.html
hex-mnp-plasmon/examples/: elixir_demo.exs  erlang_demo.erl
hex-mnp-plasmon/src/: mnp_plasmon.app.src  mnp_plasmon.erl  mnp_plasmon_material.erl  mnp_plasmon_mie.erl
hex-mnp-plasmon/test/: mnp_plasmon_tests.erl
julia-mnp-plasmon/: Project.toml
julia-mnp-plasmon/examples/: spectrum_csv.jl
julia-mnp-plasmon/src/: MnpPlasmon.jl
julia-mnp-plasmon/test/: runtests.jl
mnpbem/: README.md  README_PYPI.md  pyproject.toml
mnpbem-base/: README.md  README_PYPI.md  pyproject.toml
mnpbem-base/examples/: basic_usage.py
mnpbem-base/src/mnpbem_base/: __init__.py  factory.py  registry.py
mnpbem-bem/: README.md  README_PYPI.md  pyproject.toml
mnpbem-bem/examples/: basic_usage.py
mnpbem-bem/src/mnpbem_bem/: __init__.py  solver.py
mnpbem-demo/: README.md  README_PYPI.md  pyproject.toml
mnpbem-demo-mnpbem/: README.md  README_PYPI.md  pyproject.toml
mnpbem-demo-mnpbem/examples/: basic_usage.py
mnpbem-demo-mnpbem/src/mnpbem_demo_mnpbem/: __init__.py  runner.py
mnpbem-demo/examples/: basic_usage.py
mnpbem-demo/src/mnpbem_demo/: __init__.py  cases.py
mnpbem-greenfun/: README.md  README_PYPI.md  pyproject.toml
mnpbem-greenfun/examples/: basic_usage.py
mnpbem-greenfun/src/mnpbem_greenfun/: __init__.py  kernels.py
mnpbem-help/: README.md  README_PYPI.md  pyproject.toml
mnpbem-help/examples/: basic_usage.py
mnpbem-help/src/mnpbem_help/: __init__.py  reference.py
mnpbem-material/: MANIFEST.in  README.md  README_PYPI.md  pyproject.toml
mnpbem-material/examples/: basic_usage.py
mnpbem-material/src/mnpbem_material/: __init__.py  models.py
mnpbem-mesh2d/: README.md  README_PYPI.md  pyproject.toml
mnpbem-mesh2d/examples/: basic_usage.py
mnpbem-mesh2d/src/mnpbem_mesh2d/: __init__.py  geometry.py
mnpbem-mex/: README.md  README_PYPI.md  pyproject.toml
mnpbem-mex/examples/: basic_usage.py
mnpbem-mex/src/mnpbem_mex/: __init__.py  backend.py
mnpbem-mie/: README.md  README_PYPI.md  pyproject.toml
mnpbem-mie/examples/: basic_usage.py
mnpbem-mie/src/mnpbem_mie/: __init__.py  rayleigh.py
mnpbem-misc/: MANIFEST.in  README.md  README_PYPI.md  pyproject.toml
mnpbem-misc/examples/: basic_usage.py
mnpbem-misc/src/mnpbem_misc/: __init__.py  linalg.py  units.py  vector.py
mnpbem-particles/: README.md  README_PYPI.md  pyproject.toml
mnpbem-particles/examples/: basic_usage.py
mnpbem-particles/src/mnpbem_particles/: __init__.py  primitives.py
mnpbem-simulation/: README.md  README_PYPI.md  pyproject.toml
mnpbem-simulation/examples/: basic_usage.py
mnpbem-simulation/src/mnpbem_simulation/: __init__.py  spectra.py
mnpbem/examples/: basic_usage.py
mnpbem/src/mnpbem/: __init__.py
npm-packages/: .npmrc  .npmrc.example  README.md  package-lock.json  package.json
r-mnp-plasmon/: DESCRIPTION  NAMESPACE  README.md
r-mnp-plasmon/R/: mnp_plasmon.R
r-mnp-plasmon/examples/: spectrum_csv.R
r-mnp-plasmon/man/: mnp_plasmon.Rd
racket-mnp-plasmon/: LICENSE  README.md  info.rkt  main.rkt  mnp-plasmon.rkt
racket-mnp-plasmon/examples/: basic.rkt
racket-mnp-plasmon/scribblings/: mnp-plasmon.scrbl
racket-mnp-plasmon/tests/: test-mnp.rkt
ruby-mnp-plasmon/: Gemfile  README.md  mnp_plasmon.gemspec
ruby-mnp-plasmon/examples/: spectrum_csv.rb
ruby-mnp-plasmon/lib/: mnp_plasmon.rb
ruby-mnp-plasmon/lib/mnp_plasmon/: version.rb
ruby-mnp-plasmon/test/: test_mnp_plasmon.rb
rust-mnp-plasmon/: Cargo.toml  README.md
rust-mnp-plasmon/examples/: basic_sphere.rs  spectrum_csv.rs
rust-mnp-plasmon/src/: lib.rs
tools/: generate_javascript_example.mjs  generate_python_example.py  render_example_gallery.py
web/: index.html
(+55 files in other folders)
