[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnpbem-demo-mnpbem"
version = "0.1.10"
description = "Extended demonstration layer corresponding to the MATLAB Demo MNPBEM folder."
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "GALIH RIDHO UTOMO", email = "g4lihru@students.unnes.ac.id" }
]
license = "GPL-2.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://pypi.org/project/mnpbem-demo-mnpbem/"
Repository = "https://github.com/galihru/mnpbem/tree/main/mnpbem-demo-mnpbem"
Source = "https://github.com/galihru/mnpbem"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



