[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mnpbem-greenfun"
version = "0.1.6"
description = "Green-function utilities and kernels for electrodynamics simulations."
readme = { file = "README_PYPI.md", content-type = "text/markdown" }
requires-python = ">=3.10"
authors = [
  { name = "GALIH RIDHO UTOMO", email = "g4lihru@students.unnes.ac.id" }
]
license = "GPL-2.0-only"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
  "numpy>=1.24",
]

[project.urls]
Homepage = "https://pypi.org/project/mnpbem-greenfun/"
Repository = "https://github.com/galihru/mnpbem/tree/main/mnpbem-greenfun"
Source = "https://github.com/galihru/mnpbem"
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]



